SQRL_EXPORT = \
			sqrl.h \
			sqrl/SqrlAction.h \
			sqrl/SqrlActionChangePassword.h \
			sqrl/SqrlActionDisable.h \
			sqrl/SqrlActionEnable.h \
			sqrl/SqrlActionGenerate.h \
			sqrl/SqrlActionIdent.h \
			sqrl/SqrlActionLock.h \
			sqrl/SqrlActionRekey.h \
			sqrl/SqrlActionRemove.h \
			sqrl/SqrlActionRescue.h \
			sqrl/SqrlActionSave.h \
			sqrl/SqrlBase56.h \
			sqrl/SqrlBase56Check.h \
			sqrl/SqrlBase64.h \
			sqrl/SqrlBigInt.h \
			sqrl/SqrlBlock.h \
			sqrl/SqrlClient.h \
			sqrl/SqrlClientAsync.h \
			sqrl/SqrlCrypt.h \
			sqrl/SqrlDeque.h \
			sqrl/SqrlEnScrypt.h \
			sqrl/SqrlEncoder.h \
			sqrl/SqrlEntropy.h \
			sqrl/SqrlEntropy_Arduino.h \
			sqrl/SqrlEntropy_Linux.h \
			sqrl/SqrlEntropy_Mac.h \
			sqrl/SqrlEntropy_Win.h \
			sqrl/SqrlFixedString.h \
			sqrl/SqrlIdentityAction.h \
			sqrl/SqrlKeySet.h \
			sqrl/SqrlMLockedString.h \
			sqrl/SqrlServer.h \
			sqrl/SqrlSiteAction.h \
			sqrl/SqrlStorage.h \
			sqrl/SqrlString.h \
			sqrl/SqrlUri.h \
			sqrl/SqrlUrlEncode.h \
			sqrl/SqrlUser.h \
			sqrl/aes.h \
			sqrl/gcm.h \
			sqrl/rdrand.h \
			sqrl/sqrl_internal.h \
			sqrl/sqrl_server.h 

nobase_include_HEADERS = $(SQRL_EXPORT)

nobase_nodist_include_HEADERS = \
	sqrl/version.h

